--- a/Peacock/options.ini
+++ b/Peacock/options.ini
@@ -1,5 +1,5 @@
 Unlock everything
 
-gameplayUnlockAllShortcuts = false > true
-enableMasteryProgression = true > false
-getDefaultSuits = false > true
+gameplayUnlockAllShortcuts = true
+enableMasteryProgression = false
+getDefaultSuits = true
